--- a/VorifyMeLIVE/.env
+++ b/VorifyMeLIVE/.env
@@ -1,2 +1,2 @@
-VITE_AUDIO_SERVERhttps://vorifymelivebackend.onrender.com/audio
+VITE_AUDIO_SERVER=https://vorifymelivebackend.onrender.com/audio
 VITE_RESPONSE_SERVER=https://vorifymelivebackend.onrender.com/audio
